Issue #809 - Add bg color to cards on mobile

--- a/assets/scss/molecules/cards/_single-content-card-general.scss
+++ b/assets/scss/molecules/cards/_single-content-card-general.scss
@@ -28,8 +28,13 @@
     }
 }
 
-.single-content-card-image,
-.single-content-card-body{
+.single-content-card-body,
+.single-content-card-image {
+
+    @include breakpoint(medium down) {
+        background-color: $dark-blue-7;
+    }
+
     &:hover{
         background-color: $dark-blue-7;
     }
